2004-08-17  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b14

	* Fix: Navigation bar width was dependant on whether images were resized or not...
	  this caused albums where resize_size was off to have the table width set to 0.

	* Fix: Extra-long filename prevention in save_photos.php, as well as verifying
	  that the uploaded file is a valid image format before saving to the temp
	  directory

2004-08-16  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.4-pl1-cvs-b13

	* Fixed a typo in classes/Album.php (missing ')')

2004-08-16  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b12

	* Fix: If 'shutterfly' is set, but not checked, unset it during the
	  album upgrade.  This caused shutterfly to appear even though it wasn't
	  really enabled.

	* Change: Add copyright to modules.php

2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b11

	* Fix: Print fatal error message instead of obscure PHP error
	  when userDB fails to init before we try and use it.

2004-08-09  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b10

	* Fix: numAccessibleItems was incorrectly checking isHiddenRecurse()
	  for albums.  It needed to just be isHidden()

2004-08-06  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b9

	* Fix: Prevent foreach() error from being displayed when previewing
	  watermark previews.

	* Fix: Logging into Gallery as a non-admin and then trying to reset
	  the admin password failed.  The logged in user was used and the
	  resetadmin file was ignored

2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b8

	* Fix: Extract HTTP_POST_FILES in phpBB2's modules.php

	* Change: Remove modules.php.gz, add modules.php so that we can track
	  code changes.  There's no real reason for it to be gzip'ed.
	  - Updated HowTo.txt and removed 'unzip'...

2004-08-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-pl1-cvs-b7
